--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-Hello World
+
+<html>
+<head>
+<title>MNNIT LIBRARY</title>
+<style>
+
+h2 {
+  text-shadow: 2px 2px 5px red;
+}
+
+
+img{
+	width: 15%;
+	hight:15%;
+  opacity: 0.8;
+  filter: alpha(opacity=50);
+}
+img.img1{
+	left:400px;
+	width: 25%;
+	hight:25%;
+  opacity: 0.8;
+  filter: alpha(opacity=50);
+}
+div.box2{
+	position: absolute;
+	top:120px;
+	left:450px;
+	width:absolute;
+	height:absolute;
+	border:1px solid black;	
+}
+table, td, th {  
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 25px;
+}
+
+</style>
+</head>
+<body style="background-color:powderblue;">
+<h2>
+<center>
+<font size="10">LIBRARY MNNIT ALLAHABAD</font>
+</center>
+</h2>
+<img class='img1' src="MNNIT.png" alt="MNNIT LOGO">
+<div style="background-color:#dbacef" class='box2'>
+<center><img src="MNNIT.png" alt="MNNIT LOGO"></center>
+<table style="background-color:#dbacef">
+  <tr>
+    <th>USER ID</th>
+    <th> NAME </th>
+	<th>EMAIL </th>
+	<th>PHONE</th>
+	<th>BOOK ID</th>
+	<th>SHELF</th>
+	<th>ISSUE DATE</th>
+  </tr>
+  <!database se fetch kar ke bharo.....>
+    <tr>
+    <td>  </td>
+	<td>  </td>
+	<td>  </td>
+	<td>  </td>
+	<td>  </td>
+	<td>  </td>
+	<td> 2020-02-11 </td>
+  </tr>
+  </table>
+<center><input type="button" style="background-color:yellow" value="Print form" onClick="window.print()"></center>
+</div>
+</body>
+</html>
+
+
+
+
+
