--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<title>MNNIT LIBRARY</title>
+<title>ANUJ SINGH</title>
 <style>
 
 h2 {
@@ -49,7 +49,7 @@ th, td {
 <body style="background-color:powderblue;">
 <h2>
 <center>
-<font size="10">LIBRARY MNNIT ALLAHABAD</font>
+<font size="10">ANUJ SINGH</font>
 </center>
 </h2>
 <img class='img1' src="MNNIT.png" alt="MNNIT LOGO">
@@ -57,23 +57,19 @@ th, td {
 <center><img src="MNNIT.png" alt="MNNIT LOGO"></center>
 <table style="background-color:#dbacef">
   <tr>
-    <th>USER ID</th>
     <th> NAME </th>
 	<th>EMAIL </th>
 	<th>PHONE</th>
-	<th>BOOK ID</th>
-	<th>SHELF</th>
-	<th>ISSUE DATE</th>
+	<th>COLLEGE</th>
+	<th>BRANCH</th>
   </tr>
   <!database se fetch kar ke bharo.....>
     <tr>
-    <td>  </td>
-	<td>  </td>
-	<td>  </td>
-	<td>  </td>
-	<td>  </td>
-	<td>  </td>
-	<td> 2020-02-11 </td>
+    <td>Anuj Singh </td>
+	<td>anujsingh04072000@gmail.com</td>
+	<td>7985904971</td>
+	<td>MNNIT Allahabad</td>
+	<td>Computer Science</td>
   </tr>
   </table>
 <center><input type="button" style="background-color:yellow" value="Print form" onClick="window.print()"></center>
