--- a/index.html
+++ b/index.html
@@ -1,83 +1,62 @@
-
+<!DOCTYPE html>
 <html>
 <head>
-<title>ANUJ SINGH</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-
-h2 {
-  text-shadow: 2px 2px 5px red;
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  color:green;
 }
 
-
-img{
-	width: 15%;
-	hight:15%;
-  opacity: 0.8;
-  filter: alpha(opacity=50);
-}
-img.img1{
-	left:400px;
-	width: 25%;
-	hight:25%;
-  opacity: 0.8;
-  filter: alpha(opacity=50);
-}
-div.box2{
-	position: absolute;
-	top:120px;
-	left:450px;
-	width:absolute;
-	height:absolute;
-	border:1px solid black;	
-}
-table, td, th {  
-  border: 1px solid #ddd;
-  text-align: left;
+.title {
+  color: grey;
+  font-size: 18px;
 }
 
-table {
-  border-collapse: collapse;
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
   width: 100%;
+  font-size: 18px;
 }
 
-th, td {
-  padding: 25px;
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
 }
 
+button:hover, a:hover {
+  opacity: 0.7;
+}
 </style>
 </head>
-<body style="background-color:powderblue;">
-<h2>
-<center>
-<font size="10">ANUJ SINGH</font>
-</center>
-</h2>
-<img class='img1' src="MNNIT.png" alt="MNNIT LOGO">
-<div style="background-color:#dbacef" class='box2'>
-<center><img src="MNNIT.png" alt="MNNIT LOGO"></center>
-<table style="background-color:#dbacef">
-  <tr>
-    <th> NAME </th>
-	<th>EMAIL </th>
-	<th>PHONE</th>
-	<th>COLLEGE</th>
-	<th>BRANCH</th>
-  </tr>
-  <!database se fetch kar ke bharo.....>
-    <tr>
-    <td>Anuj Singh </td>
-	<td>anujsingh04072000@gmail.com</td>
-	<td>7985904971</td>
-	<td>MNNIT Allahabad</td>
-	<td>Computer Science</td>
-  </tr>
-  </table>
-<center><input type="button" style="background-color:yellow" value="Print form" onClick="window.print()"></center>
+<body >
+
+<h2 style="text-align:center">Profile</h2>
+
+<div class="card">
+  <img src="Anuj.jpg" alt="Anuj" style="width:75%">
+  <h1>Anuj Singh</h1>
+  <p class="title">Computer Science (3rd Year)</p>
+  <p>MNNIT Allahabad</p>
+  <div style="margin: 24px 0;">
+    <a href="https://github.com/AnujMNNIT"><i class="fa fa-github"></i></a>  
+    <a href="https://www.linkedin.com/in/anuj-singh-9a893b14a/"><i class="fa fa-linkedin"></i></a>  
+    <a href="https://www.facebook.com/people/Anuj-Singh/100012562384468"><i class="fa fa-facebook"></i></a>
+    <a href="https://www.quora.com/profile/Anuj-Singh-694"><i class="fa fa-quora"></i></a>	
+  </div>
+  <p><button>Contact</button></p>
 </div>
 </body>
 </html>
-
-
-
-
-
