--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">Profile</h2>
 
 <div class="card">
-  <img src="Anuj.jpg" alt="Anuj" style="width:75%">
+  <img src="anuj.jpg" alt="Anuj" style="width:75%">
   <h1>Anuj Singh</h1>
   <p class="title">Computer Science (3rd Year)</p>
   <p>MNNIT Allahabad</p>
