--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@ button:hover, a:hover {
     <a href="https://www.linkedin.com/in/anuj-singh-9a893b14a/"><i class="fa fa-linkedin"></i></a>  
     <a href="https://www.facebook.com/people/Anuj-Singh/100012562384468"><i class="fa fa-facebook"></i></a>
     <a href="https://www.quora.com/profile/Anuj-Singh-694"><i class="fa fa-quora"></i></a>	
+	<a href="https://www.instagram.com/singhanuj_nick/"><i class="fa fa-instagram"></i></a>  
   </div>
-  <p><button>Contact</button></p>
+  <p><button value="Email Me"
+onClick="location.href='mailto:anujsingh04072000@gmail.com'">Contact</button></p>
 </div>
 </body>
 </html>
